# News-Check

./: .env.example  .gitignore  CLAUDE.md  README.md  Teing.py  config.py  config.toml  content_analyzer.py  email_generator.py  generate_example_email.py  main.py  models.7z  news_results.json  news_scraper.py  pyproject.toml  pytest.ini  requirements.txt  soup_output.txt  test_integration_live.py  test_scraper.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: ANTI_BLOCKING_GUIDE.md  FEATURE_SUMMARY.md
generated_examples/: email_content_20260105_113350.html  email_content_20260108_152652.html
specs/001-scraper-anti-blocking/: plan.md  spec.md  tasks.md
src/: __init__.py  __main__.py  block_detector.py  config.py  content_analyzer_simple.py  document_generator.py  models.py  news_scraper_simple.py  retry_logger.py  retry_policy.py  url_utils.py  user_agent_pool.py
src/analysis/: __init__.py  insights.py  llm.py  parallel_insights.py  synthesis.py
src/anti_blocking/: __init__.py  block_detector.py  retry_policy.py  session_logger.py  user_agents.py
src/pipeline/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  simple_analyzer_test.py  test_analyzer.py  test_block_detector.py  test_content_analyzer.py  test_degradation.py  test_document_generator.py  test_google_news_parsing.py  test_markdown.py  test_news_scraper.py  test_parallel_fetcher.py  test_retry_logger.py  test_retry_policy.py  test_rss.py  test_scorer.py  test_url_utils.py  test_user_agent_pool.py
(+12 files in other folders)
