[project]
name = "news-check"
version = "0.1.0"
description = "Monthly AI digest for investment banking — Google News discovery, Playwright Edge extraction, Azure OpenAI analysis, Word + HTML email output."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "playwright>=1.49.0",
    "trafilatura>=1.12.0",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "lxml-html-clean>=0.4.0",
    "pydantic>=2.6.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
